fix the html - cacel FxLayoutWrap and empty FxLayout

--- a/src/app/modules/core/advertisement/components/card/card-bottom/card-extra/card-extra.component.scss
+++ b/src/app/modules/core/advertisement/components/card/card-bottom/card-extra/card-extra.component.scss
@@ -1,4 +1,4 @@
-#card-extra {
+.card-extra {
   align-items: flex-end;
   margin-top: 20px;
   padding: 0%;
